tests-integration/fixtures/checking2/072_prim_coercible_hidden_constructor/Main.snap
---
source: tests-integration/tests/checking2/generated.rs
assertion_line: 28
expression: report
---
Terms
coerceHidden :: Int -> HiddenAge

Types

Diagnostics
error[CoercibleConstructorNotInScope]: Constructor not in scope for Coercible
  --> 6:1..6:33
  |
6 | coerceHidden :: Int -> HiddenAge
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[NoInstanceFound]: No instance found for: Coercible @Type Int HiddenAge
  --> 1:1..7:22
  |
1 | module Main where
  | ^~~~~~~~~~~~~~~~~
